- far-clipping (with a bunch of clipping-form) support for func_static entity, come with additionnal cvar: 
	cg_farclip to turn on/off this feature (default: on), cg_farclipValue to scale it up (default: 1, value lesser than 1
	are ignored - for cheat protection), and cg_farclipZoomValue for the sharp's zoom mode (default: 3, again: value 
	lesser than 1 are ignored)
- new vote: playlist, only available through the console by typing "/callvote playlist <playlistname>", needs playlist to be
	specified in the server.cfg, "g_availablePlaylist" should be set to a string with <playlistname> seperated by white-space
- in BR or RTP: you can no longer move or shoot until the countdown has ended
- collecting an ammo belt give you full ammo for all weapon, just like when you buy it (for example in Newtown and Dawnfort)

*** CHANGES ***
- Fix reloading bug with peacemaker, winchester 1866 and 1897, and colt lightning
- Fix game crash during game load when using cgame binary library
- Fix server not hitting time limit when only bots are playing (thanks to ioQ3 code engine)
- Fix cinematic rendering with wide screens (thanks to ioQ3 code engine), intro is now visible in wide screen mode
- Fix 'nextmap' cvar bug that was randomly breaking map cycle
- Fix the bug allowing spectator to drop weapon

Changes in SG 1.0-20081231
******************
*** CHANGES ***
- Updated Unix building process to support more processor kind
- Updated Makefile to produce binary libraries for unix
- Updated Makefile to produce sse, sse2 and smp binaries for unix
- Updated Unix building process to keep install & build folder in the source base
- Fix "OP_BLOCK_COPY not dword aligned" in the same way then an old ioQuake3 fix...


Changes since sg 0.9
******************
*** CHANGES ***
- Added .mak, .bat, .lnt, .vprj, .Conscript, .Makefile files from Tequila archive (Excluded a few)
- Fixed buildvm.bat and cleanvm.bat which weren't working due to reorganization
- Organized VC build solutions